# FAConstructor

./: CMakeLists.txt  LICENSE  README.md  main.cpp
FAC/: CMakeLists.txt
FAC/source/: fiber.cpp  fiber.h  fiberfunction.cpp  fiberfunction.h  fiberpoint.cpp  fiberpoint.h  fiberpool.cpp  fiberpool.h  helpers.cpp  helpers.h  plugindata.cpp  plugindata.h  plugininterface.h
FAC/tests/: CMakeLists.txt  FiberFunctionTest.cpp  FiberPointTest.cpp  FiberPoolTest.cpp  FiberTest.cpp  HelpersTest.cpp
FACGUI/: CMakeLists.txt
FACGUI/resources/: 3dshader.frag  3dshader.vert  3dshaderfilled.geom  3dshaderhollow.geom  3dshaderlines.geom  bubble.frag  bubble.vert  resource.qrc
FACGUI/source/: elapsedtimer.cpp  elapsedtimer.h  fibereditwidget.cpp  fibereditwidget.h  fileio.cpp  fileio.h  mainwindow.cpp  mainwindow.h  optionswidget.cpp  optionswidget.h  pluginloader.cpp  pluginloader.h  render2d.cpp  render2d.h  render3d.cpp  render3d.h  renderbundle.cpp  renderbundle.h  renderdata.cpp  renderdata.h  renderwidget.cpp  renderwidget.h  settings.cpp  settings.h  settingswidget.cpp  settingswidget.h  transformation3d.cpp  transformation3d.h  version.h  version.h.in  vertex.cpp  vertex.h  widgetdef.h
FACGUI/tests/: CMakeLists.txt  ElapsedTimerTest.cpp  FiberEditWidgetTest.cpp  FileIOTest.cpp  OptionsWidgetTest.cpp
cmake/: CPackConfig.cmake  InstallLinux.cmake  InstallMacOS.cmake
plugins/pseudofomplugin/: .gitignore  CMakeLists.txt  PseudoFOMPlugin.cpp  PseudoFOMPlugin.h
resources/: FAConstructor.desktop  FAConstructor.desktop.in  FAConstructorIcon.icns
